Update API_URL to the correct web app URL

--- a/blogger-single-file.html
+++ b/blogger-single-file.html
@@ -67,7 +67,7 @@ input,textarea{width:100%;padding:8px;margin:5px 0;border-radius:8px;border:1px 
 </div>
 
 <script>
-const API_URL = "PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL";
+const API_URL = "https://script.google.com/macros/s/AKfycbyo0wMbvGdHu9Mr_3nIVQwu76L3NFhD-wPU9LNkuTVXzrTgAw4GsftsnvDqOy2c8hb6/exec";
 const CHAT_REFRESH = 3000;
 
 const state = { session:null, chatTimer:null };
