--- a/index.html
+++ b/index.html
@@ -67,15 +67,31 @@ input,textarea{width:100%;padding:8px;margin:5px 0;border-radius:8px;border:1px 
 </div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbx8aDX6za4NCYKJMHwC_8JZ4eZFCmEduwy4pCDUBYS9nqnVdW7zqIIuYmFOR_ZEX58H/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbxWpYFN-OkQTlWoJsKkyIWvPJajoqKegkEb37ZA3HMoYRIt-7q5xrgpRSJjWOxGlQVZ/exec";
 const CHAT_REFRESH = 3000;
 
 const state = { session:null, chatTimer:null };
 
+/* ===== API CORE (CORS SAFE) ===== */
 const api = {
-  post:d=>fetch(API_URL,{method:"POST",body:JSON.stringify(d)}).then(r=>r.json()),
-  get:t=>fetch(`${API_URL}?type=${t}&code=${state.session.code}`).then(r=>r.json())
+  post(data) {
+    return fetch(API_URL, {
+      method: "POST",
+      headers: {
+        "Content-Type": "text/plain"   // 🔥 IMPORTANT
+      },
+      body: JSON.stringify(data)
+    }).then(r => r.json());
+  },
+
+  get(type) {
+    // GET requests are already safe
+    return fetch(
+      `${API_URL}?type=${encodeURIComponent(type)}&code=${encodeURIComponent(state.session.code)}`
+    ).then(r => r.json());
+  }
 };
+
 
 const auth = {
   login:(c,p)=>api.post({action:"login",code:c,pin:p}).then(r=>{
