--- a/index.html
+++ b/index.html
@@ -39,6 +39,58 @@ input,textarea{
   margin:6px 0;
 }
 a{color:#ff5fa2;text-decoration:none}
+#chatBox{
+  max-height: 300px;
+  overflow-y: auto;
+  padding: 6px;
+}
+
+/* Chat rows */
+.chat-row{
+  display: flex;
+  margin: 6px 0;
+}
+
+/* Me (right side) */
+.chat-row.me{
+  justify-content: flex-end;
+}
+
+/* Partner (left side) */
+.chat-row.partner{
+  justify-content: flex-start;
+}
+
+/* Chat bubble */
+.bubble{
+  max-width: 75%;
+  padding: 10px;
+  border-radius: 14px;
+  font-size: 14px;
+}
+
+/* Me bubble */
+.chat-row.me .bubble{
+  background: #ff5fa2;
+  color: #fff;
+  border-bottom-right-radius: 4px;
+}
+
+/* Partner bubble */
+.chat-row.partner .bubble{
+  background: #f1f1f1;
+  color: #333;
+  border-bottom-left-radius: 4px;
+}
+
+/* Timestamp */
+.time{
+  font-size: 11px;
+  opacity: 0.7;
+  margin-top: 4px;
+  text-align: right;
+}
+  
 </style>
 </head>
 
@@ -140,7 +192,7 @@ const ui = {
   }).join("");
 
   // 🔥 AUTO-SCROLL
-  chatBox.scrollTop = chatBox.scrollHeight;
+  chatBox.scrollTo({ top: chatBox.scrollHeight, behavior: "smooth" });
 }
 
 };
